// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-back-to-top should render when target starts with #: should render when target starts with # 1`] = `
<ic-back-to-top target="#topEl">
  <mock:shadow-root>
    <button aria-label="Back to top" class="ic-back-to-top-link positioning">
      <span class="ic-back-to-top-icon">
        svg
      </span>
      <ic-typography variant="subtitle-small">
        <span>
          Back to top
        </span>
      </ic-typography>
    </button>
  </mock:shadow-root>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render with an icon only: should render with an icon only 1`] = `
<ic-back-to-top target="topEl" variant="icon">
  <mock:shadow-root>
    <ic-tooltip class="positioning" label="Back to top" placement="top">
      <button aria-label="Back to top" class="ic-back-to-top-link icon-only">
        <span class="ic-back-to-top-icon">
          svg
        </span>
      </button>
    </ic-tooltip>
  </mock:shadow-root>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render with footer: should render with footer 1`] = `
<ic-footer class="ic-footer ic-footer-foreground-light ic-footer-light ic-footer-sparse ic-footer-ungrouped">
  <mock:shadow-root>
    <footer>
      <div class="footer-compliance">
        <ic-section-container aligned="left" fullheight="">
          <div class="footer-compliance-inner">
            <div class="footer-copyright">
              <ic-typography variant="label-uppercase">
                © Crown Copyright
              </ic-typography>
            </div>
          </div>
        </ic-section-container>
      </div>
    </footer>
  </mock:shadow-root>
</ic-footer>
`;

exports[`ic-back-to-top should render with no targetId set: should render with no targetId set 1`] = `
<ic-back-to-top>
  <mock:shadow-root>
    <button aria-label="Back to top" class="ic-back-to-top-link positioning">
      <span class="ic-back-to-top-icon">
        svg
      </span>
      <ic-typography variant="subtitle-small">
        <span>
          Back to top
        </span>
      </ic-typography>
    </button>
  </mock:shadow-root>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render: should render 1`] = `
<ic-back-to-top target="topEl">
  <mock:shadow-root>
    <button aria-label="Back to top" class="ic-back-to-top-link positioning">
      <span class="ic-back-to-top-icon">
        svg
      </span>
      <ic-typography variant="subtitle-small">
        <span>
          Back to top
        </span>
      </ic-typography>
    </button>
  </mock:shadow-root>
</ic-back-to-top>
`;
